--- a/src/app/auth/change-password/change-password.component.html
+++ b/src/app/auth/change-password/change-password.component.html
@@ -1,5 +1,4 @@
-<section class="login-wrapper">
-    <!-- Left -->
+<!-- <section class="login-wrapper">
     <div class="left">
         <img class="login-hero" src="../../../assets/login.jpg" alt="logo">
     </div>
@@ -25,6 +24,58 @@
                     <input matInput type="password" [(ngModel)]="passwordInfo.rePassword" placeholder="Re Enter New Passsword">
                 </mat-form-field>
                 <button mat-raised-button color="primary" class="otp-btn" (click)="handleChangePassword()">Change Password</button>
+            </div>
+        </div>
+    </div>
+</section> -->
+<section>
+    <div id="wrapper">
+        <div id="left">
+            <div id="signin">
+                <div class="logo">
+                    <h2>Revamp Gen AI</h2>
+                </div>
+                <div class="form">
+                    <div>
+                        <label>Old Password</label>
+                        <input [type]="viewPassword ? 'text' : 'password'" class="text-input" [(ngModel)]="passwordInfo.OldPassword" placeholder="Enter Old Password" name="OldPassword"/>
+                    </div>
+                    <div>
+                        <label>New Password</label>
+                        <input class="text-input" [type]="viewPassword ? 'text' : 'password'" [(ngModel)]="passwordInfo.password" placeholder="Enter New Passsword" name="New password"/>
+                    </div>
+                    <div>
+                        <label>New Password</label>
+                        <input class="text-input" [type]="viewPassword ? 'text' : 'password'" [(ngModel)]="passwordInfo.rePassword" placeholder="Re Enter New Passsword" name="Re-password"/>
+                    </div>
+                    <div class="action-container">
+                        <button type="button" class="primary-btn" (click)="handleChangePassword()">Change Password</button>
+                        @if(!viewPassword) {
+                            <span (click)="viewPassword = !viewPassword">
+                                <mat-icon style="color: white;">visibility</mat-icon>
+                                View Password
+                            </span>
+                        } @else {
+                            <span (click)="viewPassword = !viewPassword">
+                                <mat-icon style="color: white;">visibility_off</mat-icon>
+                                Hide Password
+                            </span>
+                        }
+                    </div>
+                </div>
+            </div>
+            <footer id="main-footer">
+                <p>Copyright &copy; 2018, Revamp Gen AI, All Rights Reserved</p>
+            </footer>
+        </div>
+        <div id="right">
+            <div id="showcase">
+                <div class="showcase-content">
+                    <h1 class="showcase-text">
+                        Revamp Gen <strong>AI</strong>
+                    </h1>
+                    <!-- <a href="#" class="secondary-btn">Start a FREE 10-day trial</a> -->
+                </div>
             </div>
         </div>
     </div>
