--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -1,25 +1,36 @@
-<section class="login-wrapper">
-    <!-- Left -->
-    <div class="left">
-        <img class="login-hero" src="../../../assets/login.jpg" alt="logo">
-    </div>
-    <div class="right">
-        <div class="title">
-            <h3>Reset</h3>
-            <h2 class="company">Password</h2>
+<section>
+    <div id="wrapper">
+        <div id="left">
+            <div id="signin">
+                <div class="logo">
+                    <h2>Revamp Gen AI</h2>
+                </div>
+                <div class="form">
+                    <div>
+                        <label>username</label>
+                        <input type="text" class="text-input" [(ngModel)]="userInfo.username" placeholder="Enter Username Password"/>
+                    </div>
+                    <div>
+                        <label>Email</label>
+                        <input type="email" class="text-input" [(ngModel)]="userInfo.email" name="email" placeholder="Enter Email"/>
+                    </div>
+                    <div class="action-container">
+                        <button type="button" class="primary-btn" (click)="handleResetPassword()">Reset Password</button>
+                    </div>
+                </div>
+            </div>
+            <footer id="main-footer">
+                <p>Copyright &copy; 2018, Revamp Gen AI, All Rights Reserved</p>
+            </footer>
         </div>
-        <div class="form-fields">
-            <div class="user-forms">
-                <mat-form-field appearance="outline">
-                    <mat-label>Username</mat-label>
-                    <input matInput type="text" [(ngModel)]="userInfo.username" placeholder="Enter Username Password">
-                </mat-form-field>
-
-                <mat-form-field appearance="outline">
-                    <mat-label>Email</mat-label>
-                    <input matInput type="email" [(ngModel)]="userInfo.email" placeholder="Enter Email">
-                </mat-form-field>
-                <button mat-raised-button color="primary" class="otp-btn" (click)="handleResetPassword()">Reset</button>
+        <div id="right">
+            <div id="showcase">
+                <div class="showcase-content">
+                    <h1 class="showcase-text">
+                        Revamp Gen <strong>AI</strong>
+                    </h1>
+                    <a href="#" class="secondary-btn">Resetting Your Password</a>
+                </div>
             </div>
         </div>
     </div>
