--- a/src/app/components/inputs/inputs.component.html
+++ b/src/app/components/inputs/inputs.component.html
@@ -27,11 +27,11 @@
     </div>
     <button mat-raised-button color="accent" (click)="submitData()">Submit</button>
 </section>
-<ng-container *ngIf="!advanceReport && isReportLoading; else reportTemplate">
+<ng-container *ngIf="!isAdvanceReportValid && isReportLoading; else reportTemplate">
     <app-loader></app-loader>
 </ng-container>
 <ng-template #reportTemplate>
-    <div class="reports" *ngIf="advanceReport">
+    <div class="reports" *ngIf="advanceReport && isAdvanceReportValid">
         <mat-card>
             <mat-card-header>
                 <mat-card-title>Reports</mat-card-title>
@@ -40,9 +40,9 @@
                 </mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
-                <button mat-raised-button color="primary" style="margin-right: 10px;" (click)="handleDownloadFile('pdf')" *ngIf="advanceReport?.RevPDFPath">{{ advanceReport?.ReportTitle }} PDF</button>
-                <button mat-raised-button color="accent" style="margin-right: 10px;" (click)="handleDownloadFile('excel')" *ngIf="advanceReport?.RevXlPath">{{ advanceReport?.ReportTitle }} EXCEL</button>
-                <button mat-raised-button color="warn" (click)="handlePreview(advanceReport)" *ngIf="advanceReport?.HTMlString !== 'N/A'">Report Preview</button>
+                <button mat-raised-button color="primary" style="margin-right: 10px;" (click)="handleDownloadFile('pdf')" *ngIf="advanceReport?.RevPDFPath">{{ advanceReport.ReportTitle }} PDF</button>
+                <button mat-raised-button color="accent" style="margin-right: 10px;" (click)="handleDownloadFile('excel')" *ngIf="advanceReport?.RevXlPath">{{ advanceReport.ReportTitle }} EXCEL</button>
+                <button mat-raised-button color="warn" (click)="handlePreview(advanceReport)" *ngIf="advanceReport.HTMlString !== 'N/A'">Report Preview</button>
             </mat-card-content>
         </mat-card>
     </div>
