--- a/src/app/auth/reset-password/reset-password.component.scss
+++ b/src/app/auth/reset-password/reset-password.component.scss
@@ -1,73 +1,227 @@
 @import "../../../../styles/variables";
 
-.login-wrapper {
+section {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    background: #181818;
+    color: #fff;
+    overflow: hidden;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: 300;
+}
+
+#wrapper {
     display: flex;
+    flex-direction: row;
+}
+
+#left {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    height: 100vh;
+}
+
+#right {
+    flex: 1;
+}
+
+/* Sign In */
+#signin {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    padding-bottom: 1rem;
+}
+
+#signin .form {
+    width: 80%;
+    padding-bottom: 3rem;
+}
+
+#signin .logo {
+    margin-bottom: 8vh;
+}
+
+#signin .logo img {
+    width: 300px;
+}
+
+#signin label {
+    font-size: 0.9rem;
+    line-height: 2rem;
+    font-weight: 500;
+}
+
+#signin .text-input {
+    margin-bottom: 1.3rem;
     width: 100%;
-    height: 100%;
+    border-radius: 2px;
+    background: #181818;
+    border: 1px solid #555;
+    color: #ccc;
+    padding: 0.5rem 1rem;
+    line-height: 1.3rem;
+}
 
-    .left {
-        width: 60%;
-        height: 100%;
-        padding: 20px;
+#signin .primary-btn {
+    width: 50%;
+}
 
-        .login-hero {
-            width: 100%;
-            height: 100%;
-        }
+.secondary-btn,
+.links {
+    width: 60%;
+    cursor: pointer;
+}
+
+#signin .links a {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    margin-bottom: 1rem;
+    text-align: center;
+    font-size: 0.9rem;
+}
+
+#signin .or {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 1.2rem;
+    align-items: center;
+}
+
+#signin .or .bar {
+    flex: auto;
+    border: none;
+    height: 1px;
+    background: #aaa;
+}
+
+#signin .or span {
+    color: #ccc;
+    padding: 0 0.8rem;
+}
+
+/* Showcase */
+#showcase {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: url('https://i.imghippo.com/files/jRbW3410wrY.jpg') no-repeat center center / cover;
+    height: 100vh;
+    text-align: center;
+}
+
+#showcase .showcase-text {
+    font-size: 3rem;
+    width: 100%;
+    color: #fff;
+    margin-bottom: 1.5rem;
+}
+
+#showcase .secondary-btn {
+    width: 60%;
+    margin: auto;
+}
+
+/* Footer */
+#main-footer {
+    color: #ccc;
+    text-align: center;
+    font-size: 0.8rem;
+    max-width: 80%;
+    padding-top: 5rem;
+}
+
+#main-footer a {
+    color: $primary;
+    text-decoration: underline;
+}
+
+/* Button */
+.primary-btn {
+    padding: 0.7rem 1rem;
+    height: 2.7rem;
+    display: block;
+    border: 0;
+    border-radius: 2px;
+    font-weight: 500;
+    background: $primary;
+    color: #fff;
+    text-decoration: none;
+    cursor: pointer;
+    text-align: center;
+    transition: all 0.5s;
+}
+
+.primary-btn:hover {
+    background-color: $primary-opacity;
+}
+
+.secondary-btn {
+    padding: 0.7rem 1rem;
+    display: block;
+    border: 1px solid #f4f4f4;
+    border-radius: 2px;
+    font-weight: 500;
+    background: none;
+    color: #fff;
+    text-decoration: none;
+    cursor: pointer;
+    text-align: center;
+    transition: all 0.5s;
+}
+
+.secondary-btn:hover {
+    border-color: $primary;
+    color: $primary;
+}
+
+/* Media Queries */
+@media (min-width: 1200px) {
+    #left {
+        flex: 4;
     }
 
-    .right {
-        width: 40%;
-        padding: 20px;
-
-        .title {
-            h3 {
-                color: $black-accent;
-                margin: 0px;
-                font-weight: 400;
-            }
-            h2 {
-                margin-top: 10px;
-                margin-bottom: 0;
-                font-weight: bolder;
-                color: $primary;
-            }
-        }
-
-        .user-forms, .otp-forms {
-            .otp-btn, .login-btn {
-                width: 100%;
-                font-weight: lighter;
-            }
-        }
-
-        .form-fields {
-            margin-top: 20px;
-
-            mat-form-field {
-                width: 100%;
-            }
-        }
+    #right {
+        flex: 6;
     }
 }
 
-@media (max-width: 650px) {
-    .login-wrapper {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100%;
+@media (max-width: 768px) {
+    body {
+        overflow: auto;
+    }
 
-        .left {
-            width: 100%;
-            margin: auto;
-        }
+    #right {
+        display: none;
+    }
 
-        .right {
-            width: 100%;
-            margin: 0 auto;
-        }
+    #left {
+        justify-content: start;
+        margin-top: 4vh;
+    }
+
+    #signin .logo {
+        margin-bottom: 2vh;
+    }
+
+    #signin .text-input {
+        margin-bottom: 0.7rem;
+    }
+
+    #main-footer {
+        padding-top: 1rem;
     }
 }
