--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -4,53 +4,94 @@
     margin-top: 70px;
     padding: 20px;
 
-    .table-graph-container {
+    .header {
         display: flex;
-        align-items: stretch;
+        align-items: center;
+        justify-content: space-between;
         flex-wrap: wrap;
-        gap: 20px;
+    }
+
+    .table-graph-container {
+        width: 100%;
+        overflow: auto;
+        height: 500px;
+        margin: 20px 0px;
 
         table {
-            // width: 100%;
+            width: 100%;
             border-collapse: collapse;
-            flex: 2;
+        }
+
+        tr:nth-child(even) {
+            background-color: rgba(237, 236, 236, 0.6117647059);
         }
 
         th, td {
-            border: 1px solid #ccc;
             text-align: left;
-            padding: 8px;
+            padding: 16px;
+            font-size: 14px;
         }
 
         th {
-            background-color: #f4f4f4;
+            border-bottom: 1px solid #ccc;
+            position: sticky;
+            top: 0;
+            z-index: 1;
+            background-color: #fff;
         }
 
-        mat-card {
-            &.graph {
-                border-radius: 10px;
-                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-                background-color: #fff;
-                padding: 20px;
-                flex: 1;
-
-                .title {
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
-
-                    h5 {
-                        color: #b5b5ac;
-                    }
-
-                    h3, h5 {
-                        margin: 0px;
-                    }
-                }
-            }
+        &::-webkit-scrollbar {
+            display: none;
         }
     }
 
+    .tables {
+        display: flex;
+        gap: 20px ;
+
+        .tableDatas {
+            overflow: auto;
+            height: 500px;
+            margin: 20px 0px;
+            flex: 1;
+
+            .table-head-container {
+                display: flex;
+                align-items: center;
+                flex-direction: row-reverse;
+                justify-content: space-between;
+                padding: 0px 20px;
+                position: sticky;
+                top: 0;
+                z-index: 1;
+            }
+
+            table {
+                width: 100%;
+                border-collapse: collapse;
+            }
+
+            th, td {
+                text-align: left;
+                padding: 16px;
+                font-size: 14px;
+            }
+
+            tr:nth-child(even) {
+                // background-color: rgba(237, 236, 236, 0.6117647059);
+                background-color: rgb(29 233 182 / 29%);
+
+            }
+
+            th {
+                border-bottom: 1px solid #ccc;
+                position: sticky;
+                top: 0;
+                z-index: 1;
+                background-color: #1de9b6;
+            }
+        }
+    }
 
 
     .tiles-container {
@@ -58,11 +99,19 @@
         align-items: center;
         gap: 20px;
         flex-wrap: wrap;
-        margin-bottom: 20px;
+        margin: 20px 0px;
+
+        .reports {
+            mat-card-content {
+                display: flex;
+                align-items: center;
+                gap: 20px;
+            }
+        }
 
         mat-card {
             padding: 0 20px;
-            width: 270px;
+            width: 300px;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             background-color: #fff;
@@ -70,6 +119,14 @@
             mat-card-header {
                 justify-content: space-between;
                 align-items: center;
+
+                mat-card-title {
+                    display: block;
+                    width: 150px;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                }
 
                 .mat-mdc-card-header-text {
                     display: none;
@@ -121,242 +178,55 @@
         }
     }
 
-    // .title-header {
-    //     display: flex;
-    //     align-items: center;
-    //     justify-content: space-between;
-    //     flex-wrap: wrap;
+    .graph-container {
+        margin: 20px 0px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+        justify-content: center;
 
-    //     .actions {
-    //         display: flex;
-    //         align-items: center;
+        .chart-item {
+            flex: 1 1 50px;
+            max-width: 600px;
+            box-sizing: border-box;
+            padding: 15px;
+            border-radius: 8px;
+            background-color: #f9f9f9;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
-    //         h2 {
-    //             margin: 0 15px 0 0;
-    //             display: block;
-    //             padding: 7px 25px 7px 0;
-    //             color: $black-secondary;
-    //             text-transform: uppercase;
-    //             font-weight: 500;
-    //             font-size: 1.143rem;
-    //         }
-
-    //         h5 {
-    //             cursor: pointer;
-    //         }
-    //     }
-    // }
-
-    // .tiles-dounught-cart {
-    //     display: flex;
-    //     align-items: flex-start;
-    //     flex-wrap: wrap;
-    //     gap: 20px;
-    //     margin-bottom: 20px;
-
-    //     .tiles {
-    //         display: flex;
-    //         flex: 1;
-    //         align-items: center;
-    //         gap: 20px;
-    //         flex-wrap: wrap;
-    //         margin-bottom: 20px;
-
-    //         mat-card {
-    //             padding: 0 20px;
-    //             width: 270px;
-    //             border-radius: 10px;
-    //             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    //             background-color: #fff;
-
-    //             mat-card-header {
-    //                 justify-content: flex-end;
-
-    //                 mat-icon {
-    //                     color: #b5b5ac;
-    //                 }
-    //             }
-
-    //             mat-card-content {
-    //                 mat-icon {
-    //                     color: $primary;
-    //                     background-color: $primary-opacity;
-    //                     padding: 15px;
-    //                     border-radius: 50%;
-    //                 }
-
-    //                 h3 {
-    //                     font-size: 20px;
-    //                     margin-top: 10px;
-    //                     font-weight: 300;
-    //                     letter-spacing: 3px;
-    //                 }
-
-    //                 .details {
-    //                     display: flex;
-    //                     align-items: center;
-    //                     justify-content: space-between;
-
-    //                     span {
-
-    //                         &.title {
-    //                             color: $black;
-    //                             font-weight: 600;
-    //                             letter-spacing: 2px;
-    //                             font-size: 16px;
-    //                         }
-
-    //                         &.value {
-    //                             color: $black-secondary;
-    //                             font-weight: 400;
-    //                             font-size: 14px;
-    //                             letter-spacing: 2px;
-    //                         }
-    //                     }
-    //                 }
-    //             }
-    //         }
-    //     }
-
-    //     .dounught-cart {
-    //         border-radius: 10px;
-    //         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    //         background-color: #fff;
-    //         padding: 20px;
-
-    //         .title {
-    //             display: flex;
-    //             align-items: center;
-    //             justify-content: space-between;
-
-    //             h5 {
-    //                 color: #b5b5ac;
-    //             }
-
-    //             h3, h5 {
-    //                 margin: 0px;
-    //             }
-    //         }
-
-    //     }
-    // }
-
-
-    // .line-bar-charts {
-    //     display: flex;
-    //     gap: 20px;
-    //     width: 100%;
-    //     margin-bottom: 20px;
-
-    //     mat-card {
-    //         width: 50%;
-    //         border-radius: 10px;
-    //         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    //         background-color: #fff;
-    //     }
-    // }
-
-    // .pie-chart-table {
-    //     display: flex;
-    //     align-items: flex-start;
-    //     gap: 20px;
-    //     width: 100%;
-
-    //     mat-card {
-    //         border-radius: 10px;
-    //         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    //         background-color: #fff;
-
-    //         &.piechart {
-    //             width: 30%;
-    //         }
-
-    //         &.table {
-    //             width: 70%;
-
-    //             .table-container {
-    //                 position: relative;
-    //                 min-height: 200px;
-    //                 max-height: 350px;
-    //                 overflow: auto;
-
-    //                 table.mat-mdc-table {
-    //                     white-space: nowrap;
-    //                     tr {
-    //                         &:nth-child(even) {
-    //                             background-color: #edecec9c;
-    //                         }
-    //                     }
-    //                 }
-    //             }
-    //         }
-
-
-    //     }
-    // }
+            .chart-head {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+            }
+        }
+    }
 }
 
-// @media (max-width: 970px) {
-//     .dashboard {
-//         .tiles-dounught-cart {
-//             .tiles {
-//                 mat-card {
-//                     width: 265px;
-//                 }
-//             }
-//         }
+@media (max-width: 450px) {
+    .dashboard {
+        .tiles-container {
+            justify-content: center;
 
-//         .line-bar-charts {
-//             flex-direction: column;
-//             width: 100%;
+            mat-card {
+                width: 100%;
+            }
+        }
+        .table-graph-container, .tableDatas {
+            height: 600px;
+        }
+    }
+}
 
-//             .linechart, .barchart {
-//                 width: 100%;
-//             }
-//         }
+@media (max-width: 768px) {
+    .dashboard {
+        .graph-container {
+            flex-direction: column;
+            align-items: center;
+        }
 
-//         .pie-chart-table {
-//             flex-direction: column-reverse;
-
-//             mat-card.table {
-//                 width: 100%;
-//             }
-//         }
-//     }
-// }
-
-// @media (max-width: 600px) {
-//     .dashboard {
-//         .tiles-dounught-cart {
-//             .tiles {
-//                 mat-card {
-//                     width: 260px;
-//                 }
-//             }
-//         }
-//     }
-// }
-
-// @media (max-width: 425px)  {
-//     .dashboard {
-//         .tiles-dounught-cart {
-//             margin-bottom: 20px;
-
-//             .tiles {
-//                 mat-card {
-//                     width: 100%;
-//                 }
-//             }
-
-//             .dounught-cart {
-//                 width: 100%;
-//             }
-//         }
-
-//         .pie-chart-table {
-//             mat-card.piechart {
-//                 width: 100%;
-//             }
-//         }
-//     }
-// }
+        .tables {
+            flex-direction: column;
+        }
+    }
+}
